--- a/goshop/src/App.css
+++ b/goshop/src/App.css
@@ -81,3 +81,20 @@ a{
 }
 
 /* Header Part End */
+
+/* Footer Part Start */
+footer{
+  background-color: var(--color-232f3e);
+}
+footer:not(:first-child){
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+}
+footer .input-group-text{
+  background-color: var(--color-232f3e);
+  color: white;
+  padding: 8px 17px;
+  font-weight: 400;
+  line-height: 20px;
+  font-size: 20px;
+}
+/* Footer Part End */
