--- a/goshop/src/App.css
+++ b/goshop/src/App.css
@@ -8,6 +8,22 @@
   --color-3b4149: #3b4149;
   --color-febd69: #febd69;
   --color-232f3e: #232f3e;
+  --color-bf4800: #bf4800;
+  --color-f5f5f7: #f5f5f7;
+  --color-ededed: #ededed;
+  --color-777777: #777777;
+  --color-1c1c1b: #1c1c1b;
+}
+.section-heading{
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 32px;
+  margin-bottom: 30px;
+}
+.card-wrapper{
+  background-color: #fff;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
 }
 
 body{
@@ -30,6 +46,18 @@ a{
 }
 .gap-30{
   gap: 30px;
+}
+.button{
+  background-color: var(--color-232f3e);
+  color: #fff;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 15px;
+}
+.button:hover{
+  background-color: var(--color-febd69);
+  color: var(--color-131921);
+
 }
 
 /* Header Part Start*/
@@ -98,3 +126,136 @@ footer .input-group-text{
   font-size: 20px;
 }
 /* Footer Part End */
+
+/* Home Page Start */
+.main-banner-content{
+  top: 15%;
+  left: 5%;
+}
+.main-banner-content h4{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: .3px;
+  text-transform: uppercase;
+}
+.main-banner-content h5{
+  font-size: 42px;
+  line-height: 54px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  text-transform: none;
+}
+.main-banner-content p{
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: .4px;
+  color: var(--color-131921);
+}
+
+.small-banner-content{
+  top: 25%;
+  left: 10%;
+}
+.small-banner-content h4{
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: .3px;
+  text-transform: uppercase;
+}
+.small-banner-content h5{
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  text-transform: none;
+}
+.small-banner-content p{
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: .4px;
+  color: var(--color-131921);
+}
+.small-banner{
+  width: 49%;
+}
+
+/* home wrapper -2 start */
+.home-wrapper-2{
+  background-color: var(--color-f5f5f7);
+}
+/* home wrapper -2 ends */
+
+
+/* Categories Section start */
+.categories{
+  background-color: #fff;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
+}
+.categories>div{
+  width: 25%;
+  padding: 10px 20px 10px 10px;
+}
+.categories>div>div{
+  width: 60%;
+}
+
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3),
+.categories>div:nth-child(4) {
+  border-bottom: 1px solid var(--color-ededed);
+}
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3) {
+  border-right: 1px solid var(--color-ededed);
+}
+.categories>div:nth-child(5),
+.categories>div:nth-child(6),
+.categories>div:nth-child(7) {
+  border-right: 1px solid var(--color-ededed);
+}
+/* Categories Section ends */
+/* Home Page End */
+
+/* ************************************************* */
+
+/* Blog Part Start */
+.blog-card{
+  background-color: white;
+  border-radius: 10px;
+}
+.blog-card img{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.blog-content{
+  padding: 15px;
+}
+.blog-content p.date{
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: var(--color-777777);
+  padding: 0;
+}
+.blog-content h5{
+  font-size: 18px;
+  color: var(--color-131921);
+}
+.blog-content p.desc{
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-777777);
+}
+
+/* Blog Part Ends */
