--- a/goshop/src/App.css
+++ b/goshop/src/App.css
@@ -259,3 +259,54 @@ footer .input-group-text{
 }
 
 /* Blog Part Ends */
+
+/* Product Card Start */
+.product-card{
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.product-card .product-image{
+  height: 270px;
+}
+.product-card .product-image img{
+  object-fit: contain;
+}
+
+.product-card .product-image>img:last-child{
+  display: none;
+}
+.product-card:hover .product-image>img:nth-child(1){
+  display: none;
+}
+.product-card:hover .product-image>img:last-child{
+  display: block;
+}
+.product-card:hover .action-bar{
+  right: 10px;
+}
+.product-card .product-details h6{
+  color: var(--color-bf4800);
+  font-size: 13px;
+}
+
+.product-card .product-details h5{
+  font-size: 15px;
+  color: var(--color-131921);
+}
+.product-card .product-details p.price{
+  font-size: 15px;
+  color: var(--color-1c1c1b);
+}
+.action-bar{
+  top: 10%;
+  right: -23px;
+  transition: .3s;
+}
+.wishlist-icon{
+  top: 2%;
+  right: 15px;
+
+}
+/* Product Card End */
