--- a/goshop/src/App.css
+++ b/goshop/src/App.css
@@ -257,7 +257,20 @@ footer .input-group-text{
   line-height: 22px;
   color: var(--color-777777);
 }
-
+.single-blog-card h3{
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+}
+.single-blog-card p{
+  color: var(--color-777777);
+  font-size: 14px;
+}
+.single-blog-card a{
+  font-size: 18px;
+  color: var(--color-777777);
+  margin-bottom: 20px;
+}
 /* Blog Part Ends */
 
 /* Product Card Start */
@@ -496,20 +509,21 @@ footer .input-group-text{
   background-color: white;
   border-radius: 10px;
 }
-.compare-product-card .cross{
+.compare-product-card .cross, 
+.wishlist-card .cross{
   top: 10px;
   right: 15%;
   width: 25px;
   cursor: pointer;
   padding: 3px;
 }
-.compare-product-details h5.title{
+.compare-product-details h5.title, .wishlist-card h5.title{
   font-size: 15px;
   line-height: 22px;
   font-weight: 500;
   color: var(--color-1c1c1b);
 }
-.compare-product-details h6.title{
+.compare-product-details h6.price, .wishlist-card h6.price{
   font-weight: 400;
   font-size: 15px;
   line-height: 22px;
@@ -522,3 +536,169 @@ footer .input-group-text{
   border-top: 3px solid rgba(0, 0, 0, 0.1);
 }
 /* Compare Products Page End */
+
+/* Wishlist Page Start */
+/* .wishlist-card-image img{
+  height: 250px;
+  width: 240px;
+} */
+/* Wishlist Page End */
+
+/* Auth Card Start*/
+.auth-card{
+  padding: 20px;
+  background-color: white;
+  width: 500px;
+  margin: 30px auto;
+}
+.auth-card h3{
+  font-size: 19px;
+  font-weight: 500;
+  color: var(--color-777777);
+}
+.auth-card p{
+  font-size: 13px;
+  color: var(--color-777777);
+}
+.auth-card .form-control{
+  height: 50px;
+  background-color: var(--color-f5f5f7);
+  color: var(--color-131921);
+  font-size: 14px;
+  border-radius: 10px;
+  border-color: transparent;
+}
+.auth-card a{
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--color-1c1c1b);
+}
+.signup{
+  background-color: var(--color-febd69);
+  color: var(--color-131921);
+  border: none;
+}
+.signup:hover{
+  background-color: var(--color-131921);
+  color: white;
+}
+/* Auth Card End*/
+
+/* POLICY PAGES STARTS */
+.policy{
+  background-color: white;
+  padding: 30px;
+}
+/* POLICY PAGES ENDS */
+
+/* Main Product Page Start */
+.description-wrapper h4,
+.reviews-wrapper h3{
+  font-size: 26px;
+  color: var(--color-1c1c1b);
+  margin-bottom: 10px;
+}
+.description-wrapper p{
+  font-size: 14px;
+  color: var(--color-777777);
+}
+.review-inner-wrapper{
+  background-color: white;
+  padding: 30px;
+}
+.review-head{
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 20px;
+}
+.review-head h4{
+  font-size: 18px;
+  color: var(--color-1c1c1b);
+}
+.review-head p,
+.review-head a{
+  font-size: 14px;
+  color: var(--color-777777);
+}
+.review-form h4{
+  font-size: 16px;
+  color: var(--color-777777);
+}
+.review-form{
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.review:not(:last-child){
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.review p{
+  font-size: 14px;
+  color: var(--color-777777);
+}
+.main-product-image{
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.main-product-image>div{
+  border: 1px solid rgba(0, 0, 0, 0.25);
+}
+.main-product-image img{
+  width: 100% !important;
+  height: 600px !important;
+  object-fit: cover;
+}
+.other-product-images {
+  background-color: white;
+  padding: 20px;
+}
+.other-product-images > div{
+  padding: 20px;
+  width: 48%;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+}
+.main-product-image .js-image-zoom__zoomed-image{
+  left: 100px !important;
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+  z-index: 1000;
+}
+.main-product-details{
+  padding: 30px 20px;
+  border-radius: 10px;
+  background-color: white;
+}
+.border-bottom{
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+.main-product-details h3.title{
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+  margin-bottom: 10px;
+}
+.main-product-details p.price{
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+}
+.main-product-details a.review-btn,
+.t-review {
+  font-size: 13px;
+  color: var(--color-777777);
+}
+.product-heading{
+  font-size: 14px;
+  color: var(--color-1c1c1b);
+  margin-bottom: 0px;
+}
+.product-data{
+  font-size: 13px;
+  columns: var(--color-777777);
+  margin-bottom: 0px;
+}
+.main-product-details a{
+  font-size: 14px;
+  color: var(--color-777777);
+}
+/* Main Product Page End */
