--- a/goshop/src/App.css
+++ b/goshop/src/App.css
@@ -733,3 +733,14 @@ footer .input-group-text{
   color: var(--color-1c1c1b);
 }
 /* Cart Page End */
+
+/* Shipping Page Start */
+.total{
+  font-size: 14px;
+  color: var(--color-1c1c1b);
+}
+.total-price{
+  font-size: 16px;
+  color: var(--color-777777);
+}
+/* Shipping Page End */
